@@ -1,7 +1,7 @@
 #!/bin/bash
 JAVA=`which java`
 STRUCTR="-Duser.timezone=Europe/Berlin -Duser.country=US -Duser.language=en -cp target/lib/*:target/structr-ui-1.1-SNAPSHOT.jar org.structr.Server"
-STRUCTR_ARGS="-d64 -Xms1g -Xmx1g -XX:+UseNUMA -XX:+UseG1GC -Dinstance=your_instance_name"
+STRUCTR_ARGS="-d64 -Xms1g -Xmx1g -XX:+UseG1GC -XX:MaxPermSize=128m -XX:+UseNUMA -Dinstance=your_instance_name"
 
 STRUCTR_CONF=`find . -name structr.conf`
 echo "Starting Structr with config file $STRUCTR_CONF"
